crates/rome_js_formatter/tests/specs/prettier/typescript/instantiation-expression/typeof.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
let x: typeof y.z<w>;
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1 +1,2 @@
-let x: typeof y.z<w>;
+let x: typeof y.z;
+<w>;
```

# Output

```js
let x: typeof y.z;
<w>;
```


# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ typeof.ts:1:18
  │
1 │ let x: typeof y.z<w>;
  │ -----------------^ An explicit or implicit semicolon is expected here...
  │ │                 
  │ ...Which is required to end this statement

error[SyntaxError]: expected an expression but instead found ';'
  ┌─ typeof.ts:1:21
  │
1 │ let x: typeof y.z<w>;
  │                     ^ Expected an expression here


```


